--- a/index.html
+++ b/index.html
@@ -1,33 +1,26 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" type="text/css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
     <title>Document</title>
+  </head>
 
-</head>
-
-<body>
+  <body>
     <div class="container">
-        <div>
-            <h1>warhammer 40 000k "gods of chaos".</h1>
-            <ul>
-                <a href="index_01.html#color-1">
-                    <li id="color-1">Кхорн</li>
-                </a>
-                <a href="index_01.html#color-2">
-                    <li id="color-2">Тзинч</li>
-                </a>
-                <a href="index_01.html#color-3">
-                    <li id="color-3">Нургл</li>
-                </a>
-                <a href="index_01.html#color-4">
-                    <li id="color-4">Слаанеш</li>
-                </a>
-            </ul>
-        </div>
+      <div>
+        <h1>warhammer 40 000k "gods of chaos".</h1>
+        <ul>
+          <li><a id="color-1" href="index_01.html#color-1">Кхорн</a></li>
+
+          <li><a id="color-2" href="index_01.html#color-2">Тзинч</a></li>
+
+          <li><a id="color-3" href="index_01.html#color-3">Нургл</a></li>
+
+          <li><a id="color-4" href="index_01.html#color-4">Слаанеш</a></li>
+        </ul>
+      </div>
     </div>
-</body>
+  </body>
 </html>
